Modified Duel of Sorcerers

--- a/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
+++ b/1.-Python/2.-Duel-of-Sorcerers/duel-of-sorcerers.ipynb
@@ -217,8 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gandalf_power = []\n",
-    "saruman_power = []\n"
+    "gandalf_power = [50,40,40,10,50,10,40,50,50,50]\n",
+    "saruman_power = [45,45,25,50,25,40,10,45,10,10]\n"
    ]
   },
   {
@@ -231,30 +231,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "gandalf wins\n"
      ]
     }
    ],
    "source": [
-    "POWER = {\n",
-    "    'Fireball': 50, \n",
-    "    'Lightning bolt': 40, \n",
-    "    'Magic arrow': 10, \n",
-    "    'Black Tentacles': 25, \n",
-    "    'Contagion': 45\n",
-    "}\n",
+    "\n",
+    "spells = 10\n",
+    "gandalf_power = [50,40,40,10,50,10,40,50,50,50]\n",
+    "saruman_power = [45,45,25,50,25,40,10,45,10,10]\n",
     "for i in range(spells):\n",
-    "    gandalf_power.append(POWER[gandalf[i]])\n",
-    "    saruman_power.append(POWER[saruman[i]])\n",
-    "print(gandalf_power)\n",
-    "   \n"
+    "    if gandalf_power[i] > saruman_power[i]:\n",
+    "        gandalf_wins += 1\n",
+    "        saruman_wins = 0\n",
+    "        if gandalf_wins == 3:\n",
+    "            print(\"gandalf wins\")\n",
+    "            break\n",
+    "    elif gandalf_power[i] < saruman_power[i]:\n",
+    "        saruman_wins += 1\n",
+    "        gandalf_wins = 0\n",
+    "        if saruman_wins == 3:\n",
+    "            print(\"saruman wins\")\n",
+    "            break\n",
+    "    else:\n",
+    "        print(\"its a tie\")\n",
+    "    "
    ]
   },
   {
@@ -266,10 +274,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The average spell power of Gandalf is 39.0\n",
+      "The average spell power of Saruman is 30.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tot_gandalf = 0\n",
+    "Tot_saruman = 0\n",
+    "\n",
+    "for i in gandalf_power:\n",
+    "    Tot_gandalf += i\n",
+    "    Avg_gandalf = Tot_gandalf/spells\n",
+    "\n",
+    "for i in saruman_power:\n",
+    "    Tot_saruman += i\n",
+    "    Avg_saruman = Tot_saruman/spells\n",
+    "\n",
+    "print (\"The average spell power of Gandalf is\", Avg_gandalf)\n",
+    "print (\"The average spell power of Saruman is\", Avg_saruman)\n",
+    "   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -277,6 +309,41 @@
    "source": [
     "#### 6. Find the standard deviation of the spell power of Gandalf and Saruman. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "standard deviation of spell power of gandalf is 15.951314818673865\n",
+      "standard deviation of spell power of saruman is 15.532224567009067\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "tot_gandalf = 0\n",
+    "tot_saruman = 0\n",
+    "for i in gandalf_power:\n",
+    "    tot_gandalf += (i-Avg_gandalf)**2\n",
+    "    dev_gandalf = math.sqrt(tot_gandalf/(len(gandalf)-1))\n",
+    "for i in saruman_power:\n",
+    "    tot_saruman += (i-Avg_saruman)**2\n",
+    "    dev_saruman = math.sqrt(tot_saruman/len(saruman)-1)\n",
+    "print (\"standard deviation of spell power of gandalf is\",dev_gandalf)\n",
+    "print (\"standard deviation of spell power of saruman is\",dev_saruman)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
