--- a/1.-Python/3.-Bus/bus.ipynb
+++ b/1.-Python/3.-Bus/bus.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,10 +52,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (len(stops))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +77,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 13, 11, 10, 14, 10, 7, 5, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "passengers=[]\n",
+    "total_passengers = 0\n",
+    "for i in stops:\n",
+    "        total_passengers = total_passengers + i[0]-i[1]\n",
+    "        passengers.append(total_passengers)\n",
+    "print(passengers)      \n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,16 +107,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maximum occupation is  14\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (\"maximum occupation is \",max(passengers))"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 4. Calculate the average occupation. And the standard deviation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average occupation of passengers is 9.333333333333334\n",
+      "standard deviation is 3.391164991562634\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "tot_passengers = 0\n",
+    "avg_passengers = sum(passengers)/len(passengers)\n",
+    "for i in passengers:\n",
+    "    tot_passengers += (i-avg_passengers)**2\n",
+    "dev_passengers = math.sqrt(tot_passengers/(len(stops)-1))\n",
+    "print(\"average occupation of passengers is\",avg_passengers)\n",
+    "print(\"standard deviation is\",dev_passengers)"
    ]
   },
   {
@@ -117,7 +178,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
