--- a/1.-Python/5.-Temperature-Processor/temperature.ipynb
+++ b/1.-Python/5.-Temperature-Processor/temperature.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,10 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "min_temp = min(temperatures_C)\n",
+    "print(min_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -67,10 +78,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "90\n"
+     ]
+    }
+   ],
+   "source": [
+    "max_temp = max(temperatures_C)\n",
+    "print(max_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,10 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[70, 76, 80, 81, 80, 83, 90, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "high_temp = []\n",
+    "for i in temperatures_C:\n",
+    "    if (i>=70):\n",
+    "        high_temp.append(i)\n",
+    "print(high_temp)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -95,10 +132,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average temperature of the day is 60.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_temp = 0\n",
+    "for i in temperatures_C:\n",
+    "    sum_temp += i\n",
+    "avg_temp = sum_temp/len(temperatures_C)\n",
+    "print(\"average temperature of the day is\",avg_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -128,10 +179,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[91.4, 150.8, 149.0, 32.0, 138.2, 140.0, 143.60000000000002, 147.2, 158.0, 168.8, 176.0, 177.8, 176.0, 181.4, 194.0, 174.20000000000002, 141.8, 127.4, 122.0, 120.2, 127.4, 118.4, 113.0, 102.2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp_F = []\n",
+    "for i in temperatures_C:\n",
+    "    temp_F.append(1.8*i+32)\n",
+    "print (temp_F)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,10 +214,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 96,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Criteria 1 is met\n",
+      "Criteria 2 is met\n",
+      "Cooling system needs to be changed\n"
+     ]
+    }
+   ],
+   "source": [
+    "Replace = False\n",
+    "\n",
+    "#Criteria 1\n",
+    "if (len(high_temp)>=4):\n",
+    "    print(\"Criteria 1 is met\")\n",
+    "    Replace = True\n",
+    "    \n",
+    "#Criteria 2\n",
+    "for i in temperatures_C:\n",
+    "    if(i>80): \n",
+    "        break\n",
+    "print(\"Criteria 2 is met\")\n",
+    "Replace=True\n",
+    "        \n",
+    "#Criteria 3\n",
+    "if (avg_temp > 65):\n",
+    "    print(\"criteria 3 is met\")\n",
+    "    Replace = True\n",
+    "\n",
+    "if(Replace==True):\n",
+    "    print(\"Cooling system needs to be changed\")\n",
+    "else:    \n",
+    "    print(\"Cooling system doesn't need to be changed\")\n",
+    "\n",
+    "        "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -175,10 +275,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 10, 11, 12, 13, 14, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "h=0\n",
+    "hr_temp=[]\n",
+    "for i in temperatures_C:\n",
+    "    if i>70:\n",
+    "        hr_temp.append(h)\n",
+    "    h += 1\n",
+    "print(hr_temp)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -218,16 +335,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "average temperature in Farenheit is 140.45\n",
+      "average temperature in Celsius is 60.25\n",
+      "Relation between both values is F=1.8*C +32\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum_temp_F = 0\n",
+    "for i in temp_F:\n",
+    "    sum_temp_F += i\n",
+    "avg_temp_F = sum_temp_F/len(temp_F)\n",
+    "print(\"average temperature in Farenheit is\", avg_temp_F)\n",
+    "print(\"average temperature in Celsius is\", avg_temp)\n",
+    "print(\"Relation between both values is F=1.8*C +32\")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### 5. Find the standard deviation of the temperature lists (ºC and ºF). What is the relation between both standard deviations?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "standard deviation of temperature in Farenheit is 35.46085410580297\n",
+      "standard deviation of temperature in Celsius is 40.56575981742752\n",
+      "105.01836767136953\n",
+      "There is no relation between standard deviations as such.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tot_temp = 0\n",
+    "import math\n",
+    "for i in temp_F:\n",
+    "    tot_temp += (i-avg_temp_F)**2\n",
+    "dev_temp_F = math.sqrt(tot_temp/(len(temp_F)-1))\n",
+    "print(\"standard deviation of temperature in Farenheit is\", dev_temp_F)\n",
+    "\n",
+    "for i in temperatures_C:\n",
+    "    tot_temp += (i-avg_temp)**2\n",
+    "dev_temp_C = math.sqrt(tot_temp/(len(temperatures_C)-1))\n",
+    "print(\"standard deviation of temperature in Celsius is\",dev_temp_C)\n",
+    "print(((dev_temp_C) * 1.8) + 32)\n",
+    "print(\"There is no relation between standard deviations as such.\")"
    ]
   },
   {
@@ -254,7 +421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
